# CS8803-cgai

./: pyproject.toml
src/app/(assignment)/assignment/A1a/: customized.mkv  default.mkv  fragment.glsl  page.tsx  readme.md
src/app/(assignment)/assignment/A1b/: fragment.glsl  neural_sdf.ipynb
src/app/(assignment)/assignment/A2a/: a.py  fragment.glsl  page.tsx
src/app/(assignment)/assignment/A2b/: drums128-10.txt  drums128-256-16.txt  drums128-64-16.txt  drums256-10.txt  drums64-10.txt  drums64-16.txt  fragment.glsl  lego.txt  nerf.ipynb
src/app/(assignment)/assignment/a1/: fragment.glsl  page.tsx
