[project]
name = "cs8803-cgai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pyvista>=0.44.1",
    "tqdm>=4.67.1",
    "vtk>=9.4.1",
]
